--- a/www/index.html
+++ b/www/index.html
@@ -5,10 +5,11 @@
 	<meta name="viewport" content="width=device-width">
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/css-reset.css" />
-	<link rel="stylesheet" type="text/css" href="css/bootstrap-grid-3.3.1.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<link rel="stylesheet" type="text/css" href="css/media.css" />
-	<script src="js/jquery-1.11.3.min.js"></script>
+	<script src="js/jquery-3.1.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script src="js/script.js"></script>
 	<!--[if lt IE 9]>
 	   <script>
