--- a/www/header+footer.html
+++ b/www/header+footer.html
@@ -152,7 +152,54 @@
 
 <!-- footer -->
 <footer>
-
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 footer-cols-wrapper">
+				<div class="footer-col">
+					<span>Каталог</span>
+					<ul>
+						<li><a href="#">Посмотреть каталог онлайн</a></li>
+						<li><a href="#">Заказать каталог по почте</a></li>
+						<li><a href="#">Брошюры</a></li>
+						<li><a href="#">Руководства по покупке</a></li>
+					</ul>
+				</div>
+				<div class="footer-col">
+					<span>Каталог</span>
+					<ul>
+						<li><a href="#">Посмотреть каталог онлайн</a></li>
+						<li><a href="#">Заказать каталог по почте</a></li>
+						<li><a href="#">Брошюры</a></li>
+						<li><a href="#">Руководства по покупке</a></li>
+					</ul>
+				</div>
+				<div class="footer-col">
+					<span>Каталог</span>
+					<ul>
+						<li><a href="#">Посмотреть каталог онлайн</a></li>
+						<li><a href="#">Заказать каталог по почте</a></li>
+						<li><a href="#">Брошюры</a></li>
+						<li><a href="#">Руководства по покупке</a></li>
+					</ul>
+				</div>
+				<div class="footer-col">
+					<ul class="footer-socials">
+						<li><a href="#"></a></li>
+						<li><a href="#"></a></li>
+						<li><a href="#"></a></li>
+						<li><a href="#"></a></li>
+						<li><a href="#"></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12 footer-copyright">
+				<div>© 2014 ИП Земляк Мария Владимировна<br>Интернет-магазин продуктов питания с доставкой на дом.<br>680003, г.Хабаровск, ул. Краснореченская, 97а</div>
+				<div>Разработка сайта <a href="http://web-alt.ru" target="_blank">web-alt.ru</a></div>
+			</div>
+		</div>
+	</div>
 </footer>
 <!-- /footer -->
 <script src="js/jquery-3.1.1.min.js"></script>
