--- a/www/index.html
+++ b/www/index.html
@@ -53,10 +53,22 @@
 						<form action="" class="modal-content">
 							<div class="modal-header">Свяжитесь с нами</div>
 							<div class="modal-body">
-								<input class="animated-placeholder" type="text" id="feedback-name" required placeholder="Имя" />
-								<input class="animated-placeholder" type="tel" id="feedback-phone" required placeholder="Номер телефона" />
-								<input class="animated-placeholder" type="email" id="feedback-email" placeholder="E-mail">
-								<textarea class="animated-placeholder" name="feedback-text" id="feedback-text" required placeholder="Текст сообщения"></textarea>
+								<div class="input">
+									<input class="animated-placeholder" type="text" id="feedback-name" required placeholder="" />
+									<label for="feedback-name">Имя</label>
+								</div>
+								<div class="input">
+									<input class="animated-placeholder" type="tel" id="feedback-phone" required placeholder="" />
+									<label for="feedback-phone">Номер телефона</label>
+								</div>
+								<div class="input">
+									<input class="animated-placeholder" type="email" id="feedback-email" required placeholder="">
+									<label for="feedback-email">E-mail</label>
+								</div>
+								<div class="input">
+									<textarea class="animated-placeholder" name="feedback-text" id="feedback-text" required placeholder=""></textarea>
+									<label for="feedback-text">Текст сообщения</label>
+								</div>
 							</div>
 							<div class="modal-footer">
 								<div class="submit-result">Спасибо! Ваше сообщение было отправлено.</div>
@@ -182,8 +194,54 @@
 		<div class="col-xs-4"><a href="#" style="background-image: url('images/category4.jpg');"><span>Сантехника</span></a></div>
 		<div class="col-xs-4"><a href="#" style="background-image: url('images/category5.jpg');"><span>Fiskars</span></a></div>
 		<div class="col-xs-4"><a href="#" class="offer-of-the-week">
-			<div class="label">ВЫБОР<br>НЕДЕЛИ</div>
+			<div class="label label-right">ВЫБОР<br>НЕДЕЛИ</div>
+			<div class="image" style="background-image: url('images/fiskars.jpg');"></div>
+			<div class="description">
+				<div class="name">Fiskars Ручной скрепер  для  уборки снега</div>
+				<div class="price">1500.00 руб</div>
+				<div class="art">Артикул: 143000</div>
+			</div>
 		</a></div>
+	</div>
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12 heading"><span>Новинки</span></div>
+	</div>
+	<div class="row goods">
+		<div class="col-xs-3">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-1.png');"></div>
+				<div class="title">Инициатик - средства против первых морщин</div>
+				<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+				<div class="price">
+					<div class="normal-price">
+						3593.37 <span>руб</span>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-3">
+			<div class="item sale">
+				<div class="label label-right">ЛОВИ<br>МОМЕНТ</div>
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
+				<div class="title">Инициатик - средства против первых морщин</div>
+				<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст</div>
+				<div class="price">
+					<div class="special-price">3593.37 <span>руб</span></div>
+					<div class="old-price">3593.37 <span>руб</span></div>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-3"></div>
+		<div class="col-xs-3"></div>
+		<div class="col-xs-3"></div>
+		<div class="col-xs-3"></div>
+		<div class="col-xs-3"></div>
+		<div class="col-xs-3"></div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12 pager"><span class="next"><a href="#">Смотреть еще</a></span></div>
 	</div>
 </div>
 <!-- footer -->
@@ -240,6 +298,7 @@
 <!-- /footer -->
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.dotdotdot.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
