--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
 	<title>Эксперт-М</title>
 	<link rel="stylesheet" type="text/css" href="css/css-reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/waves.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<link rel="stylesheet" type="text/css" href="css/media.css" />
 	<!--[if lt IE 9]>
@@ -211,34 +212,148 @@
 	<div class="row goods">
 		<div class="col-xs-3">
 			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-1.png');"></div>
+				<div class="image" style="background-image: url('images/tovar-1.png');"><div class="zoom"></div></div>
 				<div class="title">Инициатик - средства против первых морщин</div>
 				<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
 				<div class="price">
-					<div class="normal-price">
-						3593.37 <span>руб</span>
-					</div>
+					<div>3593.37 <span>руб</span></div>
 				</div>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-3">
+			<div class="item sale">
+				<div class="label label-left thumb-up"></div>
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="title">Инициатик - средства против первых морщин</div>
+				<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст</div>
+				<div class="price">
+					<div>3593.37 <span>руб</span></div>
+				</div>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
 		<div class="col-xs-3">
 			<div class="item sale">
 				<div class="label label-right">ЛОВИ<br>МОМЕНТ</div>
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
 				<div class="title">Инициатик - средства против первых морщин</div>
 				<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст</div>
 				<div class="price">
-					<div class="special-price">3593.37 <span>руб</span></div>
-					<div class="old-price">3593.37 <span>руб</span></div>
+					<div>3593.37 <span>руб</span></div>
 				</div>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-3"></div>
-		<div class="col-xs-3"></div>
-		<div class="col-xs-3"></div>
-		<div class="col-xs-3"></div>
-		<div class="col-xs-3"></div>
-		<div class="col-xs-3"></div>
+		<div class="col-xs-3">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="title">Инициатик - средства против первых морщин</div>
+				<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+				<div class="price">
+					<div>3593.37 <span>руб</span></div>
+				</div>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-3">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="title">Инициатик - средства против первых морщин</div>
+				<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+				<div class="price">
+					<div>3593.37 <span>руб</span></div>
+				</div>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-3">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="title">Инициатик - средства против первых морщин</div>
+				<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст</div>
+				<div class="price special-price">
+					<div>3593.37 <span>руб</span></div>
+					<div class="old-price">3593.37 <span>руб</span></div>
+				</div>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-3">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="title">Инициатик - средства против первых морщин</div>
+				<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+				<div class="price">
+					<div>3593.37 <span>руб</span></div>
+				</div>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-3">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="title">Инициатик - средства против первых морщин</div>
+				<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+				<div class="price">
+					<div>3593.37 <span>руб</span></div>
+				</div>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12 pager"><span class="next"><a href="#">Смотреть еще</a></span></div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12 heading"><span>Хиты</span></div>
+	</div>
+	<div class="row goods">
+		<div class="col-xs-3">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="title">Инициатик - средства против первых морщин</div>
+				<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+				<div class="price">
+					<div>3593.37 <span>руб</span></div>
+				</div>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-3">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="title">Инициатик - средства против первых морщин</div>
+				<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст</div>
+				<div class="price special-price">
+					<div>3593.37 <span>руб</span></div>
+					<div class="old-price">3593.37 <span>руб</span></div>
+				</div>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-3">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="title">Инициатик - средства против первых морщин</div>
+				<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+				<div class="price">
+					<div>3593.37 <span>руб</span></div>
+				</div>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-3">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="title">Инициатик - средства против первых морщин</div>
+				<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+				<div class="price">
+					<div>3593.37 <span>руб</span></div>
+				</div>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-12 pager"><span class="next"><a href="#">Смотреть еще</a></span></div>
@@ -299,6 +414,15 @@
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.dotdotdot.min.js"></script>
+<script src="js/waves.min.js"></script>
 <script src="js/script.js"></script>
+<script>
+	window.onload = function(){
+		Waves.init();
+	};
+	Waves.attach(".to-the-cart", [
+		"waves-button"
+	]);
+</script>
 </body>
 </html>
